k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/go-hello-world/hello:latest
          imagePullPolicy: Always
          name: hello
          ports:
            - containerPort: 8080
              protocol: TCP
